--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,9 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/ansible-community/ansible-lint
-    rev: v5.3.2
+      - id: detect-private-key
+  - repo: https://github.com/ansible-community/ansible-lint.git
+    rev: v6.22.1  # put latest release tag from https://github.com/ansible-community/ansible-lint/releases/
     hooks:
       - id: ansible-lint
+        files: \.(yaml|yml)$
