--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,43 @@
-ansible==8.6.1
-ansible-compat==4.1.10
-ansible-core==2.15.6
-ansible-lint==6.22.1
-attrs==22.2.0
-black==22.12.0
-boto==2.49.0
-boto3==1.34.4
-botocore==1.34.4
+ansible==9.2.*
+ansible-compat==4.1.*
+ansible-core==2.16.*
+ansible-lint==24.2.*
+attrs==22.2.*
+black==22.12.*
+boto==2.49.*
+boto3==1.34.*
+botocore==1.34.*
 bracex==2.3.post1
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.3
-commonmark==0.9.1
-cryptography==41.0.6
-filelock==3.9.0
-idna==3.4
-Jinja2==3.1.2
-jmespath==1.0.1
-jsonschema==4.17.3
-MarkupSafe==2.1.1
-mypy-extensions==0.4.3
-packaging==22.0
-pathspec==0.10.3
-platformdirs==2.6.2
-pycparser==2.21
-Pygments==2.15.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-PyYAML==6.0
-requests==2.31.0
-resolvelib==0.8.1
-rich==13.0.0
-ruamel.yaml==0.18.5
-ruamel.yaml.clib==0.2.7
-s3transfer==0.9.0
-six==1.16.0
-subprocess-tee==0.4.1
-tomli==2.0.1
-urllib3==1.26.18
-wcmatch==8.4.1
-yamllint==1.32.0
+certifi==2023.7.*
+cffi==1.15.*
+charset-normalizer==3.2.*
+click==8.1.*
+commonmark==0.9.*
+cryptography==41.0.*
+filelock==3.9.*
+idna==3.*
+Jinja2==3.1.*
+jmespath==1.0.*
+jsonschema==4.17.*
+MarkupSafe==2.1.*
+mypy-extensions==0.4.*
+packaging==22.*
+pathspec==0.10.*
+platformdirs==2.6.*
+pycparser==2.*
+Pygments==2.15.*
+pyrsistent==0.19.*
+python-dateutil==2.8.*
+PyYAML==6.*
+requests==2.31.*
+resolvelib==0.8.*
+rich==13.0.*
+ruamel.yaml==0.18.*
+ruamel.yaml.clib==0.2.*
+s3transfer==0.9.*
+six==1.16.*
+subprocess-tee==0.4.*
+tomli==2.0.*
+urllib3==1.26.*
+wcmatch==8.4.*
+yamllint==1.32.*
