Update cenote configs

--- a/roles/cenote-apache/templates/vhosts/vhosting-le-ssl.conf
+++ b/roles/cenote-apache/templates/vhosts/vhosting-le-ssl.conf
@@ -4,14 +4,14 @@
 DocumentRoot /var/www/
 
 AddType text/html .shtml
-AddOutputFilter INCLUDES .shtml
+AddOutputFilter INCLUDES .shtml 
 
 
 ServerName cenote.water.gkhs.net
 # get the server name from the Host: header
 UseCanonicalName Off
 
-ServerAlias 109.74.192.161 avenell.me.uk cam.treasuretrap.co.uk cenote.gkhs.net cenote.water.gkhs.net comeoutandplay.games comicpress.socksandpuppets.com comic.socksandpuppets.com dailyphoto.aquarionics.com dhmstark.co.uk emptytables.org imperial.istic.net isittheweekend.com kastark.co.uk lampstand.maelfroth.org larp.me.uk live.dailyphoto.aquarionics.com localhost ludo.istic.net michael.conterio.co.uk nanocountdown.com narciss.istic.net nfnc.treasuretrap.co.uk nicholasavenell.com quotes.afphrid.org.uk rho21 strangelrp.foip.me swatt.treasuretrap.co.uk thomwillis.uk vault www.avenell.me www.contrarythoughts.com www.deadbadgerdesigns.co.uk www.gkhs.net www.grantabruggehamstery.co.uk www.iglooteas.com www.pinsandneedlescostume.co.uk www.socksandpuppets.com www.treasuretrap.co.uk www.wherearemyfuckingkeys.com
+ServerAlias 109.74.192.161 avenell.me avenell.me.uk cam.treasuretrap.co.uk cenote.gkhs.net cenote.water.gkhs.net comeoutandplay.games comicpress.socksandpuppets.com comic.socksandpuppets.com dailyphoto.aquarionics.com dhmstark.co.uk emptytables.org imperial.istic.net isittheweekend.com kastark.co.uk lampstand.maelfroth.org larp.me.uk live.dailyphoto.aquarionics.com localhost ludo.istic.net michael.conterio.co.uk nanocountdown.com narciss.istic.net nfnc.treasuretrap.co.uk nicholasavenell.com quotes.afphrid.org.uk rho21 strangelrp.foip.me swatt.treasuretrap.co.uk thomwillis.uk vault www.avenell.me www.contrarythoughts.com www.deadbadgerdesigns.co.uk www.gkhs.net www.grantabruggehamstery.co.uk www.iglooteas.com www.pinsandneedlescostume.co.uk socksandpuppets.com www.socksandpuppets.com www.treasuretrap.co.uk www.wherearemyfuckingkeys.com forgotten.foip.me
 
 # this log format can be split per-virtual-host based on the first field
 # LogFormat "%V %h %l %u %t \"%r\" %s %b" vcommon
