🛠 Rename aws-route53 to firth-dns for clarity and expansion of responsibilities

--- a/playbook.yml
+++ b/playbook.yml
@@ -8,8 +8,8 @@
       connection: local
       tags: aws
       run_once: true
-    - name: aws-route53
-      role: aws-route53
+    - name: firth-dns
+      role: firth-dns
       become: false
       connection: local
       tags: route53
