--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,7 @@
-ansible==9.2.0
-ansible-compat==4.1.11
-ansible-core==2.16.7
-ansible-lint==24.2.3
-attrs==22.2.0
-black==24.3.0
-boto==2.49.0
-boto3==1.34.5
-botocore==1.34.117
-bracex==2.3.post1
-build==1.2.1
-CacheControl==0.14.0
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-cleo==2.1.0
-click==8.1.7
-commonmark==0.9.1
-crashtest==0.4.1
-cryptography==42.0.7
-distlib==0.3.8
-dulwich==0.21.7
-fastjsonschema==2.19.1
-filelock==3.9.1
-idna==3.7
-importlib_metadata==7.1.0
-installer==0.7.0
-jaraco.classes==3.4.0
-Jinja2==3.1.4
-jmespath==1.0.1
-jsonschema==4.17.3
-keyring==24.3.1
-MarkupSafe==2.1.5
-more-itertools==10.2.0
-msgpack==1.0.8
-mypy_extensions==0.4.4
-packaging==22.0
-pathspec==0.10.3
-pexpect==4.9.0
-pkginfo==1.11.0
-platformdirs==2.6.2
-poetry==1.8.3
-poetry-core==1.9.0
-poetry-plugin-export==1.8.0
-ptyprocess==0.7.0
-pycparser==2.22
-Pygments==2.15.1
-pyproject_hooks==1.1.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-PyYAML==6.0.1
-rapidfuzz==3.9.3
-requests==2.32.3
-requests-toolbelt==1.0.0
-resolvelib==0.8.1
-rich==13.0.1
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
-s3transfer==0.9.0
-shellingham==1.5.4
-six==1.16.0
-subprocess-tee==0.4.1
-tomli==2.0.1
-tomlkit==0.12.5
-trove-classifiers==2024.5.22
-urllib3==1.26.19
-virtualenv==20.26.2
-wcmatch==8.4.1
-xattr==1.1.0
-yamllint==1.32.0
-zipp==3.19.1
+ansible==9.2.*
+ansible-lint==24.2.*
+boto==2.49.*
+boto3==1.34.*
+poetry==1.8.*
+poetry-plugin-export==1.8.*
+virtualenv==20.26.*
