➕ Reload handler for nginx

--- a/roles/firth-nginx/handlers/main.yml
+++ b/roles/firth-nginx/handlers/main.yml
@@ -3,3 +3,8 @@
   ansible.builtin.service:
     name: nginx
     state: restarted
+
+- name: reload nginx
+  ansible.builtin.service:
+    name: nginx
+    state: reloaded
