--- a/roles/firth-nginx/handlers/main.yml
+++ b/roles/firth-nginx/handlers/main.yml
@@ -4,7 +4,7 @@
     name: nginx
     state: restarted
 
-- name: reload nginx
+- name: Reload nginx
   ansible.builtin.service:
     name: nginx
     state: reloaded
