--- a/roles/water-gkhs-users/tasks/main.yml
+++ b/roles/water-gkhs-users/tasks/main.yml
@@ -54,10 +54,9 @@
   tags:
     - users
 
-
 - name: Delete ~/.forward file
   ansible.builtin.file:
-    path: "~{{ item }}/.forward"
+    path: ~{{ item }}/.forward
     state: absent
   with_items:
     - aquarion
