--- a/roles/jellyfin/tasks/main.yml
+++ b/roles/jellyfin/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add GPG key
   ansible.builtin.apt_key:
-    url: "https://repo.jellyfin.org/{{ ansible_distribution | lower }}/jellyfin_team.gpg.key"
+    url: https://repo.jellyfin.org/{{ ansible_distribution | lower }}/jellyfin_team.gpg.key
     state: present
     keyring: /etc/apt/keyrings/jellyfin.gpg
   tags:
@@ -16,7 +16,7 @@
 - name: Jellyfin Repo
   ansible.builtin.deb822_repository:
     name: jellyfin
-    uris: "https://repo.jellyfin.org/{{ ansible_distribution | lower }}"
+    uris: https://repo.jellyfin.org/{{ ansible_distribution | lower }}
     suites: "{{ ansible_distribution_release }}"
     state: present
     signed_by: /etc/apt/keyrings/jellyfin.gpg
@@ -36,7 +36,6 @@
     - jellyfin
   tags:
     - jellyfin
-
 
 - name: Send admin emails to admin
   ansible.builtin.copy:
