--- a/roles/water-gkhs-dovecot/meta/main.yml
+++ b/roles/water-gkhs-dovecot/meta/main.yml
@@ -1,3 +1,4 @@
+---
 galaxy_info:
   author: Nicholas Avenell <nicholas@istic.net>
   description: Dovecot IMAP server installation
@@ -38,13 +39,13 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: ['dovecot', 'mail', 'imap', 'pop3']
-    # List tags for your role here, one per line. A tag is a keyword that describes
-    # and categorizes the role. Users find roles by searching for tags. Be sure to
-    # remove the '[]' above, if you add tags to this list.
-    #
-    # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
-    #       Maximum 20 tags per role.
+  galaxy_tags: [dovecot, mail, imap, pop3]
+# List tags for your role here, one per line. A tag is a keyword that describes
+# and categorizes the role. Users find roles by searching for tags. Be sure to
+# remove the '[]' above, if you add tags to this list.
+#
+# NOTE: A tag is limited to a single word comprised of alphanumeric characters.
+#       Maximum 20 tags per role.
 
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
