--- a/roles/water-gkhs-filebot/tasks/main.yml
+++ b/roles/water-gkhs-filebot/tasks/main.yml
@@ -83,7 +83,8 @@
     name: filebot
     minute: 2,32
     user: "{{ media_user }}"
-    job: "{{ media_home }}/bin/sortitaaht.sh 2>&1 | logger --tag Filebot --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }}"
+    job: "{{ media_home }}/bin/sortitaaht.sh 2>&1 | logger --tag Filebot --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port
+      }}"
     cron_file: filebot
     state: present
   tags:
@@ -114,7 +115,8 @@
     minute: "15"
     hour: 3
     user: "{{ media_user }}"
-    job: "{{ media_home }}/bin/download_youtube.sh 2>&1  | logger --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }} --tag youtube"
+    job: "{{ media_home }}/bin/download_youtube.sh 2>&1  | logger --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }} --tag
+      youtube"
     cron_file: download_youtube
     state: present
   tags:
@@ -146,7 +148,8 @@
     minute: "15"
     hour: 18
     user: "{{ media_user }}"
-    job: "{{ media_home }}/bin/remove_completed_torrents.sh 2>&1 | logger --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }} --tag torrent_remove"
+    job: "{{ media_home }}/bin/remove_completed_torrents.sh 2>&1 | logger --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port
+      }} --tag torrent_remove"
     cron_file: remove_completed_torrents
     state: present
   tags:
