--- a/roles/firth-dns/tasks/main.yml
+++ b/roles/firth-dns/tasks/main.yml
@@ -1,10 +1,19 @@
 ---
+# - name: Install Boto
+#   ansible.builtin.pip:
+#     state: present
+#     name:
+#       - boto
+#       - botocore
+#   tags:
+#     - aws
 - name: Install Boto
-  ansible.builtin.pip:
+  ansible.builtin.apt:
     state: present
     name:
-      - boto
-      - botocore
+      - python3-boto3
+      - python3-botocore
+  become: yes
   tags:
     - aws
 
@@ -108,6 +117,7 @@
   tags:
     - aws
     - istic_net
+    - istic_sys
 
 - name: Update Route53 for nanocountdown
   ansible.builtin.include_tasks: zones/nanocountdown.yml
