--- a/roles/water-gkhs-nginx/tasks/main.yml
+++ b/roles/water-gkhs-nginx/tasks/main.yml
@@ -4,15 +4,106 @@
     pkg: nginx
     state: present
 
+- name: Ensure /etc/nginx/snippets exists
+  ansible.builtin.file:
+    path: /etc/nginx/snippets
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
+  tags:
+    - nginx
+
+- name: Ensure /etc/nginx/snippets/ssl exists
+  ansible.builtin.file:
+    path: /etc/nginx/snippets/ssl
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
+  tags:
+    - nginx
+
 - name: Fix diffie-hellman insecurites
   ansible.builtin.include_tasks: diffie-hellman.yml
 
-- name: Add clacks overhead to nginx
-  ansible.builtin.copy:
-    dest: /etc/nginx/conf.d/clacks.conf
-    src: files/clacks.conf
-    owner: root
-    group: root
-    mode: "0664"
+- name: Cloudflare IP Whitelist
+  tags:
+    - cloudflare
+    - cloudflare_ips
+  block:
+    - name: Make sure /etc/nginx/tmp/ exists
+      ansible.builtin.file:
+        path: /etc/nginx/tmp
+        state: directory
+        owner: root
+        group: root
+        mode: "0755"
+    - name: Download IPv4 list
+      ansible.builtin.get_url:
+        url: https://www.cloudflare.com/ips-v4
+        dest: /etc/nginx/tmp/ip4.txt
+        force: "yes"
+        mode: "0755"
+    - name: Download IPv6 list
+      ansible.builtin.get_url:
+        url: https://www.cloudflare.com/ips-v6
+        dest: /etc/nginx/tmp/ip6.txt
+        force: "yes"
+        mode: "0755"
+    - name: Slurp IP4 list
+      ansible.builtin.slurp:
+        src: /etc/nginx/tmp/ip4.txt
+      register: ipv4list
+    - name: Slurp IP6 list
+      ansible.builtin.slurp:
+        src: /etc/nginx/tmp/ip6.txt
+      register: ipv6list
+
+    - name: Update /etc/nginx/snippets/cloudflare-ips.nginx.conf
+      ansible.builtin.copy:
+        content:
+          "# Ansible Managed\n{{ (ipv4list['content'] | b64decode + '\n' + ipv6list['content'] | b64decode) | regex_replace('([0-9a-f.:/]+)', 'allow \\1;')
+          + '\nallow 127.0.0.1;\nallow ::1;\ndeny all;\n' }}"
+        dest: /etc/nginx/snippets/cloudflare-ips.nginx.conf
+        force: true
+        mode: "0644"
+        owner: root
+        group: root
+        remote_src: true
+      notify: Reload nginx
+
+- name: Configure config overrides
+  ansible.builtin.template:
+    src: "{{ item }}"
+    dest: /etc/nginx/snippets/{{ item | basename }}
+    mode: "0644"
+  with_fileglob:
+    - templates/nginx_snippets/*
+  notify:
+    - Reload nginx
+  tags:
+    - nginx
+
+- name: Configure conf.d items
+  ansible.builtin.template:
+    src: "{{ item }}"
+    dest: /etc/nginx/conf.d/{{ item | basename }}
+    mode: "0644"
+  with_fileglob:
+    - templates/nginx_confd/*
+  notify:
+    - Restart nginx
+  tags:
+    - nginx
+
+- name: Configure nginx redirects
+  ansible.builtin.template:
+    src: config/redirects.nginx.j2
+    dest: /etc/nginx/conf.d/www_redirects.conf
+    mode: "0644"
+  vars:
+    add_www: "{{ nginx_add_www | default([]) }}"
+    remove_www: "{{ nginx_remove_www | default([]) }}"
   notify:
     - Restart nginx
