Refactor Redis ACL reload handler name for consistency

--- a/roles/firth-docker/tasks/main.yml
+++ b/roles/firth-docker/tasks/main.yml
@@ -84,7 +84,7 @@
     line: user dockersites on +@all -DEBUG ~* >{{ dockersites_redis_password }}
     regex: ^user dockersites
   notify:
-    - Reload redis
+    - Reload Redis ACL
   tags:
     - docker
     - redis
